fix: better link styling

--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -123,6 +123,8 @@ $hero_background_color: $teal;
 $hero_link_color: $white;
 $hero_link_hover: $light_blue;
 
+$contact_link_color: $lightest_blue;
+
 $jump_to_submit_disabled: $mid_gray_3;
 $jump_to_submit_active: $mid_blue;
 $jump_to_submit_active_focus: $dark_blue;
