fix prop styling from django temp to vue

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -82,9 +82,9 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
             <div class="cta">
                 <div class="resources__container">
                         <recent-resources
-                            api_url={{ API_BASE }}
-                            resource_link='{% url 'resources' %}'
-                            fr_doc_link='{% url 'resources' %}?resourceCategory={{ fr_docs_category_name }}'
+                            api-url={{ API_BASE }}
+                            resource-link='{% url 'resources' %}'
+                            fr-doc-link='{% url 'resources' %}?resourceCategory={{ fr_docs_category_name }}'
                         />
                 </div>
         <div class="about-text__container">
