--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -123,6 +123,8 @@ $hero_background_color: $teal;
 $hero_link_color: $white;
 $hero_link_hover: $light_blue;
 
+$contact_link_color: $lightest_blue;
+
 $jump_to_submit_disabled: $mid_gray_3;
 $jump_to_submit_active: $mid_blue;
 $jump_to_submit_active_focus: $dark_blue;
@@ -336,23 +338,24 @@ $width-3xl: 1920px; // The largest the site container will get
 // -------------------------
 
 @mixin external-link {
-    content: "";
-    background-image: url("#{$eregs-image-path}/external-link.svg");
+    width: 0.8em;
+    height: 0.8em;
     margin-left: 0.1em;
     padding-left: 1em;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 0.8em;
+    content: "";
+    -webkit-mask: url(#{$eregs-image-path}/external-link.svg) no-repeat 50% 50%;
+    mask: url(#{$eregs-image-path}/external-link.svg) no-repeat 50% 50%;
+    -webkit-mask-size: 80%;
+    mask-size: 80%;
+    -webkit-mask-position: center;
+    mask-position: center;
+    background-color: $primary_link_color;
 }
 
 @mixin external-link-hover {
-    content: "";
-    background-image: url("#{$eregs-image-path}/external-link-hover.svg");
-    margin-left: 0.1em;
-    padding-left: 1em;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 0.8em;
+    @include external-link;
+
+    background-color: $primary_link_hover;
 }
 
 a {
@@ -429,7 +432,8 @@ a {
     }
 }
 
-html, body {
+html,
+body {
     scroll-behavior: smooth !important;
 }
 
