fix: better specificity for contact link styles

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -115,7 +115,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                             training for your group.
                         </p>
                         <a
-                            class="external"
+                            class="contact external"
                             href="{{ SURVEY_URL }}"
                             target="_blank"
                             rel="noopener noreferrer"
@@ -134,7 +134,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                         <h4>Sign Up For Testing</h4>
                         <p>Try new features and help make them better.</p>
                         <a
-                            class="external"
+                            class="contact external"
                             href="{{ SIGNUP_URL }}"
                             target="_blank"
                             rel="noopener noreferrer"
