--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -30,7 +30,7 @@
             }
         }
 
-        a {
+        a.contact {
             @include link-common;
             text-decoration: underline;
 
