--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -335,15 +335,15 @@
 
                     .video__container {
                         margin-right: 15px;
-                        padding-bottom: 24px;
                     }
 
                     .resources__container {
                         margin-right: 15px;
-                        padding-top: 32px;
+                        padding-top: 24px;
                     }
 
-                    .about-text__container {
+                    .about-text__container,
+                    .policy-materials__container {
                         margin-left: 15px;
                         margin-bottom: 30px;
                     }
@@ -442,6 +442,55 @@
                     p {
                         font-size: 18px;
                         line-height: 24px;
+                    }
+                }
+
+                .policy-materials__container {
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+
+                    .policy-materials {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        background-color: $lightest_gray;
+                        padding: 24px 8px 32px;
+
+                        .policy-materials__title {
+                            text-align: center;
+                            margin-bottom: 8px;
+                        }
+
+                        .policy-materials__categories {
+                            display: flex;
+                            margin-bottom: 8px;
+
+                            span {
+                                font-weight: bold;
+                                font-size: 14px;
+                                line-height: 22px;
+                                color: $mid_gray;
+
+                                &:not(:last-child) {
+                                    padding-right: 1em;
+                                    margin-right: 1em;
+                                    border-right: 1px solid $light_gray;
+                                }
+                            }
+                        }
+
+                        .policy-materials__text {
+                            margin: 0 24px 16px;
+                            p {
+                                margin-block-start: 0 !important;
+                                margin-block-end: 0 !important;
+                                font-size: 16px;
+                                line-height: 24px;
+                            }
+
+                        }
                     }
                 }
 
