--- a/solution/ui/regulations/css/scss/partials/_typography.scss
+++ b/solution/ui/regulations/css/scss/partials/_typography.scss
@@ -36,6 +36,14 @@ h2 {
     font-family: $secondary_site_font;
 }
 
+.homepage-component__heading {
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 700;
+    font-family: $secondary_site_font;
+    color: $primary_color;
+}
+
 su,
 e[t="51"] {
     vertical-align: super;
