--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -446,6 +446,8 @@
                 }
 
                 .policy-materials__container {
+                    container: policy-materials-container / inline-size;
+
                     flex: 1;
                     display: flex;
                     flex-direction: column;
@@ -457,6 +459,7 @@
                         align-items: center;
                         background-color: $lightest_gray;
                         padding: 24px 8px 32px;
+                        border-radius: 3px;
 
                         .policy-materials__title {
                             text-align: center;
@@ -465,6 +468,7 @@
 
                         .policy-materials__categories {
                             display: flex;
+                            flex-wrap: wrap;
                             margin-bottom: 8px;
 
                             span {
@@ -478,6 +482,25 @@
                                     margin-right: 1em;
                                     border-right: 1px solid $light_gray;
                                 }
+
+                                @container policy-materials-container (max-width: 274px) {
+                                    font-size: 12px;
+                                    line-height: 20px;
+
+                                    &:not(:last-child) {
+                                        padding-right: 0.5em;
+                                        margin-right: 0.5em;
+                                    }
+                                }
+
+                                @container policy-materials-container (max-width: 215px) {
+                                    font-size: 11px;
+
+                                    &:not(:last-child) {
+                                        padding-right: 0.3em;
+                                        margin-right: 0.3em;
+                                    }
+                                }
                             }
                         }
 
@@ -489,7 +512,6 @@
                                 font-size: 16px;
                                 line-height: 24px;
                             }
-
                         }
                     }
                 }
