feat: label, style, a11y tweaks

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -61,10 +61,10 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                         >
                             <img
                                 src="{% static 'images/home_video.png' %}"
-                                alt="View a 3-minute video demonstration."
+                                alt="View a 6-minute video demonstration."
                             />
                         </a>
-                        <label id="videoLabel">View a 3-minute video demonstration.</label>
+                        <label id="videoLabel">View a 6-minute video demonstration.</label>
                     </div>
                     <div class="about-text__container">
                         <p>
@@ -118,7 +118,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                     <div class="column__icon contact__icon">
                         <img
                             src="{% static 'images/home_icon_contact.svg' %}"
-                            alt="View a 6-minute video demonstration."
+                            alt="Text messaging bubbles"
                         />
                     </div>
                     <div>
@@ -141,7 +141,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                     <div class="column__icon signup__icon">
                         <img
                             src="{% static 'images/home_icon_testing.svg' %}"
-                            alt="View a 3-minute video demonstration."
+                            alt="A computer screen displaying two beta testing versions of the website"
                         />
                     </div>
                     <div>
