--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -289,6 +289,7 @@
             width: 100%;
             margin: 0 auto;
             padding: $spacer-3 $spacer-5;
+            box-sizing: border-box;
 
             @include screen-xl {
                 max-width: $width-xl;
