feat: minor responsive padding tweaks

--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -313,6 +313,7 @@
 
                     .resources__container {
                         margin-right: 0;
+                        padding-bottom: $spacer-3;
 
                         .content-tabs {
                             padding-right: 12px;
