fix: tweak example search link

--- a/solution/backend/regulations/templates/regulations/homepage_prototype.html
+++ b/solution/backend/regulations/templates/regulations/homepage_prototype.html
@@ -103,7 +103,7 @@ Medicaid &amp; CHIP eRegulations - A CMCS Pilot Project
                                 </p>
                             </div>
                             <a
-                                href="{% url 'search' %}?q='public%20health%20emergency'"
+                                href='{% url "search" %}?q="public%20health%20emergency"'
                                 class="action-btn default-btn link-btn"
                                 >Try a Sample Search</a
                             >
