fix: better external link icon styles

--- a/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
+++ b/solution/ui/regulations/css/scss/partials/_site_homepage_update.scss
@@ -37,14 +37,14 @@
             color: $contact_link_color;
 
             &:link::after {
-                background-color: $contact_link_color;
+                filter: brightness(0.02) invert(1);
             }
 
             &:visited {
                 color: $contact_link_color;
 
                 &::after {
-                    background-color: $contact_link_color;
+                    filter: brightness(0.02) invert(1);
                 }
             }
         }
