--- a/solution/ui/regulations/css/scss/_application_settings.scss
+++ b/solution/ui/regulations/css/scss/_application_settings.scss
@@ -368,22 +368,13 @@ $width-3xl: 1920px; // The largest the site container will get
 @mixin external-link {
     width: 0.8em;
     height: 0.8em;
+    padding-left: 1px;
     margin-left: 0.1em;
-    padding-left: 1em;
-    content: "";
-    -webkit-mask: url(#{$eregs-image-path}/external-link.svg) no-repeat 50% 50%;
-    mask: url(#{$eregs-image-path}/external-link.svg) no-repeat 50% 50%;
-    -webkit-mask-size: 80%;
-    mask-size: 80%;
-    -webkit-mask-position: center;
-    mask-position: center;
-    background-color: $primary_link_color;
+    content: url(#{$eregs-image-path}/external-link.svg);
 }
 
 @mixin external-link-hover {
     @include external-link;
-
-    background-color: $primary_link_hover;
 }
 
 a {
